removed debugging stuff from cart view, fixed css header fixed position alignment issue with firefox, fixed jquery issue with search

--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -1,7 +1,7 @@
 .header
-	{
+{
 		position:fixed;
-		margin-top:-25px;
+		margin-top:-210px;
 		width:100%;
 		height:210px;
 		color:#FFF;
@@ -91,10 +91,6 @@
           font-weight: bold;
           height:10px;
           width:150px;
-				}
-				#search_category
-				{
-					display:none;
 				}
 			}
 		}
