--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,8 +15,7 @@
 
 #body
 {
-	top:200px;
-	position:relative;
+	margin:0px auto;
 	background-color: #E8EEEF;
 	color:#FFF;
 
@@ -33,7 +32,7 @@
 	}
 	#container
 	{
-		margin:15px auto;
+		margin:200px auto;
 		width:900px;
 		color: #000;
 
