--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the store controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h2
+{
+	padding-top:25px;
+}
+h3
+{
+	padding-top:50px;
+}
